[gd_scene load_steps=8 format=2]

[ext_resource path="res://MapSelector.gd" type="Script" id=1]
[ext_resource path="res://MapButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://Level.tscn" type="PackedScene" id=4]
[ext_resource path="res://Misc/novem___.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://sprites/endoflevel.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 1
outline_color = Color( 0.247059, 0.156863, 0.196078, 1 )
font_data = ExtResource( 5 )

[node name="Main" type="Node2D"]
script = ExtResource( 3 )
Level = ExtResource( 4 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="MapSelector" type="GridContainer" parent="UI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -326.265
margin_top = -153.461
margin_right = 59.7355
margin_bottom = 282.539
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 56
custom_constants/hseparation = 64
columns = 6
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
MapButton = ExtResource( 2 )

[node name="CurrentTime" type="Label" parent="UI"]
visible = false
margin_left = 7.0
margin_top = 9.0
margin_right = 151.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.929412, 0.937255, 0.968627, 1 )
text = "00:00.000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PB" type="Label" parent="UI"]
visible = false
margin_left = 8.0
margin_top = 46.0
margin_right = 152.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.905882, 0.384314, 1 )
text = "New PB!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndOfLevel" type="HBoxContainer" parent="UI"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -340.0
margin_top = -142.0
margin_right = 340.0
margin_bottom = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackToMenu" type="Control" parent="UI/EndOfLevel"]
margin_right = 224.0
margin_bottom = 242.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3

[node name="endoflevel" type="Sprite" parent="UI/EndOfLevel/BackToMenu"]
position = Vector2( 113, 67.1224 )
scale = Vector2( 8, 8 )
texture = ExtResource( 6 )
hframes = 3

[node name="CurrentTime" type="Label" parent="UI/EndOfLevel/BackToMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = 29.5
margin_right = 100.0
margin_bottom = 96.5
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.929412, 0.937255, 0.968627, 1 )
text = "Back to Menu
[ESC]
[SELECT]"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="Control" parent="UI/EndOfLevel"]
margin_left = 228.0
margin_right = 452.0
margin_bottom = 242.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3

[node name="endoflevel" type="Sprite" parent="UI/EndOfLevel/Restart"]
position = Vector2( 115, 67.1224 )
scale = Vector2( 8, 8 )
texture = ExtResource( 6 )
hframes = 3
frame = 1

[node name="CurrentTime" type="Label" parent="UI/EndOfLevel/Restart"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = 29.5
margin_right = 100.0
margin_bottom = 96.5
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.929412, 0.937255, 0.968627, 1 )
text = "Restart Level
[R]
[R1]"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next" type="Control" parent="UI/EndOfLevel"]
margin_left = 456.0
margin_right = 680.0
margin_bottom = 242.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3

[node name="endoflevel" type="Sprite" parent="UI/EndOfLevel/Next"]
position = Vector2( 113, 67.1224 )
scale = Vector2( 8, 8 )
texture = ExtResource( 6 )
hframes = 3
frame = 2

[node name="CurrentTime" type="Label" parent="UI/EndOfLevel/Next"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = 29.5
margin_right = 100.0
margin_bottom = 96.5
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.929412, 0.937255, 0.968627, 1 )
text = "Next Level
[ENTER]
[START]"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="UI/EndOfLevel/BackToMenu" to="." method="_on_BackToMenu_gui_input"]
[connection signal="gui_input" from="UI/EndOfLevel/Restart" to="." method="_on_Restart_gui_input"]
[connection signal="gui_input" from="UI/EndOfLevel/Next" to="." method="_on_Next_gui_input"]
